--- a/module00/ex01/Makefile
+++ b/module00/ex01/Makefile
@@ -1,15 +1,18 @@
 NAME := phonebook
-CC := c++
-FLAGS := -std=c++98 -Wall -Werror -Wextra
+CXX := c++
+CXXFLAGS := -std=c++98 -Wall -Werror -Wextra
 SOURCE := main.cpp Contact.cpp
 OBJ := $(SOURCE:.cpp=.o)
 
 all: $(NAME)
 
 $(NAME): $(OBJ)
-	$(CC) $(FLAGS) $(OBJ) -o $(NAME)
+	$(CXX) $(CXXFLAGS) $(OBJ) -o $(NAME)
 
 clean:
 	rm -f $(OBJ)
 fclean: clean
 	rm -f $(NAME)
+re: fclean all
+
+.PHONY: all clean fclean re
