--- a/module00/ex02/Makefile
+++ b/module00/ex02/Makefile
@@ -1,16 +1,19 @@
 NAME := banker
-CC := c++
-FLAGS := -std=c++98 -Wall -Werror -Wextra
+CXX := c++
+CXXFLAGS := -std=c++98 -Wall -Werror -Wextra
 SOURCE := Account.cpp tests.cpp
 OBJ := $(SOURCE:.cpp=.o)
 
 all:$(NAME)
 
 $(NAME): $(OBJ)
-	$(CC) $(FLAGS) $(OBJ) -o $(NAME)
+	$(CXX) $(CXXFLAGS) $(OBJ) -o $(NAME)
 
 clean:
 	rm -f $(OBJ)
 
 fclean: clean
 	rm -rf $(NAME)
+re: fclean all
+
+.PHONY: all clean fclean re
