--- a/module05/ex00/Makefile
+++ b/module05/ex00/Makefile
@@ -1,1 +1,16 @@
-NAME
+NAME = bureaucrat
+CXX = c++
+CXXFLAGS = -Wall -Werror -Wextra -std=c++98
+SOURCE = main.cpp Bureaucrat.cpp
+OBJ = $(SOURCE:.cpp=.o)
+
+all: $(NAME)
+
+$(NAME): $(OBJ)
+	$(CXX) $(CXXFLAGS) $(OBJ) -o $(NAME)
+clean:
+	rm -f $(OBJ)
+fclean: clean
+	rm -f $(NAME)
+re: fclean all
+.PHONY: all clean fclean re
